--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
 			<artifactId>lab2_3_dep</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+	   <dependency>
+		   <groupId>org.hedgecode.maven.plugins</groupId>
+		   <artifactId>classpath-maven-plugin</artifactId>
+		   <version>1.0</version>
+	   </dependency>
    </dependencies>
    <build>
 		<plugins>
